policies/restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: validate-allowed-registries
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: "Image must be pulled from an approved registry (gitlab.infra.local:5050)."
        pattern:
          spec:
            =(initContainers):
              - image: "gitlab.infra.local:8888/*"
            containers:
              - image: "gitlab.infra.local:8888/*"
            =(ephemeralContainers):
              - image: "gitlab.infra.local:8888/*"
